6th Aug - Performance Improvements
This code runs much faster. Still assumes that most of the tables and
indexes are created before it runs.